Fix gas price button width if gas price amount too long (#1156)
* Fix gas price button width if gas price amount too long

--- a/universal-login-react/src/ui/styles/gasPrice.sass
+++ b/universal-login-react/src/ui/styles/gasPrice.sass
@@ -41,15 +41,14 @@
     display: block
 
   .gas-price-dropdown
-    position: relative
-    max-width: 270px
-    width: 270px
     margin-top: 5px
+    position: relative
+    min-width: 270px
+    width: auto
 
   .gas-price-selected
     display: flex
     justify-content: space-between
-    height: 40px
     border: 1px solid
     border-radius: 2px
 
@@ -64,7 +63,6 @@
     height: 24px
 
   .gas-price-btn
-    height: 38px
     width: 34px
     background: url('./../assets/icons/3dots.svg') center no-repeat
     border: none
